# HarmoniumLite

MusicGame/: MusicGame.sln  structure.txt
MusicGame/MusicGame/: CMakeLists.txt  MusicGame.vcxproj  MusicGame.vcxproj.filters
MusicGame/MusicGame/resources/: example.json
MusicGame/MusicGame/src/: Application.cpp  Button.cpp  Button.h  CallbackRegistry.h  Core.h  Entity.cpp  Entity.h  FontDictionary.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  KeyContext.h  Main.cpp  MenuState.cpp  MenuState.h  MusicKey.cpp  MusicKey.h  PianoSoundGenerator.h  Scales.h  Scene.cpp  Scene.h  State.h  StateIdentifiers.h  StateStack.cpp  StateStack.h  Text.cpp  Text.h  UIElement.cpp  UIElement.h  UIFactory.cpp  UIFactory.h  UIProperties.cpp  UIProperties.h
